# poloscripts

./: .gitignore  README.md  global.ini  requirements.txt
auto-nornir/: README.rst  pyproject.toml
auto-nornir/auto_nornir/: exceptions.py  helpers.py  main.py  main_functions.py  output.py  tasks.py
auto-nornir/auto_nornir/core/: config.yaml  core.py  exceptions.py  helpers.py  main.py  main_functions.py  output.py  tasks.py
auto-nornir/auto_nornir/core/inventory/: groups.yaml
auto-nornir/auto_nornir/core/models/: bootstrap.py  device.py  filter.py  menu.py  platform.py  template.py
auto-nornir/auto_nornir/core/templates/ios/: change_dmvpn_hub.j2  enable_scp_server.j2
auto-nornir/auto_nornir/inventory/: groups.yaml  hosts.yaml
auto-nornir/auto_nornir/models/: Bootstrap.py  Device.py  Filter.py  Menu.py  bootstrap.py  device.py  filter.py  huawei.py  ios.py  menu.py  platform.py  platform_factory.py
auto-nornir/auto_nornir/templates/ios/: secure_ssh.j2  set_boot_image.j2
auto-nornir/auto_nornir/website/: __init__.py  auth.py  client_secret.json  database.db  models.py  uploads.py  views.py
auto-nornir/auto_nornir/website/static/: index.js
auto-nornir/auto_nornir/website/templates/: base.html  filter.html  home.html  login.html  sign_up.html
auto-nornir/tests/: test_auto_nornir.py  test_bootstrap.py  test_device.py
do_config/: do_config.py  do_config_with_list_vars.py  eBGP_NOKIA.j2  new_fw_context.j2  retag_vlan2000.j2
napalm-ce/: ce.py
napalm_vrp/: __init__.py  ce.py  prueba.py  pyproject.toml  vrp.py
netbox_scripts/: .~lock.Código Inmueble_ampliado.csv#  GESTION2.csv  Region.py  Site.py  anchoas  anchoas.csv  cod_inm.csv  inm.csv  populate.py  set_sites_from_csv.py  (+1 more)
nornir3/: config.yaml  main.py  main_functions.py  pyproject.toml  requirements.txt  tasks.py
nornir3/inventory/: groups.yaml  hosts.yaml
nornir3/models/: Bootstrap.py  Filter.py  huawei.py  ios.py
(+24 files in other folders)
